<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itesm.ronald.emprendedor.WishActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/my_awesome_toolbar"
        android:id="@+id/content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/nameText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/descriptionText"
            android:layout_below="@+id/nameText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:maxLength="200"
            android:hint="@string/descriptionText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/contactPhone"
            android:gravity="center"
            android:layout_below="@+id/descriptionText"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:hint="@string/contactPhone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/CostText"
            android:layout_below="@+id/contactPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:hint="Costo del deseo"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/youtubeLink"
            android:layout_below="@+id/CostText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:inputType="textUri"
            android:hint="@string/youtubeLink" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded"
            android:text="Pide tu deseo"
            android:textColor="@color/white"
            android:id="@+id/makeWishButton"
            android:layout_below="@+id/youtubeLink"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="makeWish" />

    </RelativeLayout>

</RelativeLayout>
